--- a/docker-compose.web.yml
+++ b/docker-compose.web.yml
@@ -4,11 +4,11 @@ version: '3.8'
 
 networks:
   management_network:
-    external: true
+   # external: true
   corporate_lan:
-    external: true
+   # external: true
   dmz_network:
-    external: true
+   # external: true
 
 services:
   # === DVWA (Damn Vulnerable Web Application) ===
