--- a/docker-compose.iot.yml
+++ b/docker-compose.iot.yml
@@ -4,11 +4,11 @@ version: '3.8'
 
 networks:
   management_network:
-    external: true
+   # external: true
   corporate_lan:
-    external: true
+   # external: true
   iot_network:
-    external: true
+   # external: true
 
 services:
   # === Broker MQTT (pour l'IoT) ===
