--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,22 +6,22 @@ networks:
     driver: bridge
     ipam:
       config:
-        - subnet: 10.10.10.0/24
+        - subnet: 10.99.10.0/24
   corporate_lan:
     driver: bridge
     ipam:
       config:
-        - subnet: 192.168.1.0/24
+        - subnet: 192.168.99.0/24
   dmz_network:
     driver: bridge
     ipam:
       config:
-        - subnet: 172.16.1.0/24
+        - subnet: 172.16.99.0/24
   iot_network:
     driver: bridge
     ipam:
       config:
-        - subnet: 192.168.2.0/24
+        - subnet: 192.168.98.0/24
 
 services:
   # === Machine Kali Linux (Machine d'attaque principale) ===
@@ -29,39 +29,17 @@ services:
     image: kalilinux/kali-rolling:latest
     container_name: kali_linux
     hostname: kali
-    # Configuration des ressources pour réduire la consommation
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1G
-    volumes:
-      - kali_data:/root
-      - ./shared_files:/shared
-    networks:
-      management_network:
-        ipv4_address: 10.10.10.10
-      corporate_lan:
-        ipv4_address: 192.168.1.100
     ports:
-      - "2222:22"  # SSH
-      - "6080:6080"  # NoVNC
-    environment:
-      - TZ=Europe/Paris
-    command: >
-      bash -c "apt update && 
-              apt install -y --no-install-recommends 
-              openssh-server novnc x11vnc xfce4 firefox-esr 
-              nmap metasploit-framework wireshark burpsuite 
-              sqlmap dirb && 
-              mkdir -p /run/sshd && 
-              echo 'root:kali' | chpasswd && 
-              sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && 
-              service ssh start && 
-              x11vnc -create -forever -passwd kali -display :1 & 
-              /usr/share/novnc/utils/launch.sh --vnc localhost:5900 --listen 6080 & 
-              DISPLAY=:1 startxfce4 & 
-              while true; do sleep 3600; done"
+      - "2222:22"
+      - "6080:6080"
+    command: bash -c "apt update && apt install -y --no-install-recommends xfce4 xfce4-terminal tigervnc-standalone-server novnc net-tools curl openssh-server && 
+            mkdir -p /root/.vnc && echo 'kali' | vncpasswd -f > /root/.vnc/passwd && chmod 600 /root/.vnc/passwd && 
+            vncserver :1 -geometry 1280x800 -depth 24 && 
+            /usr/share/novnc/utils/launch.sh --vnc localhost:5901 --listen 6080 & 
+            tail -f /dev/null"
+    networks:
+      - management_network
+      - corporate_lan
 
   # === Infrastructure réseau ===
   router:
@@ -79,14 +57,10 @@ services:
           cpus: '0.5'
           memory: 256M
     networks:
-      corporate_lan:
-        ipv4_address: 192.168.1.1
-      dmz_network:
-        ipv4_address: 172.16.1.1
-      iot_network:
-        ipv4_address: 192.168.2.1
-      management_network:
-        ipv4_address: 10.10.10.1
+      - corporate_lan
+      - dmz_network
+      - iot_network
+      - management_network
     command: >
       bash -c "sysctl -w net.ipv4.ip_forward=1 && 
               /usr/lib/frr/docker-start"
@@ -103,8 +77,7 @@ services:
           cpus: '0.2'
           memory: 128M
     networks:
-      corporate_lan:
-        ipv4_address: 192.168.1.10
+      - corporate_lan
     command: >
       sh -c "apk add --no-cache python3 && 
             python3 -m http.server 80 & 
