--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
 version: '3.8'
 
-# Définition des réseaux pour isoler les environnements
 networks:
   management_network:
     driver: bridge
@@ -24,24 +23,21 @@ networks:
         - subnet: 192.168.98.0/24
 
 services:
-  # === Machine Kali Linux (Machine d'attaque principale) ===
   kali_linux:
     image: kalilinux/kali-rolling:latest
     container_name: kali_linux
     hostname: kali
     ports:
       - "2222:22"
-      - "6080:6080"
-    command: bash -c "apt update && apt install -y --no-install-recommends xfce4 xfce4-terminal tigervnc-standalone-server novnc net-tools curl openssh-server && 
-            mkdir -p /root/.vnc && echo 'kali' | vncpasswd -f > /root/.vnc/passwd && chmod 600 /root/.vnc/passwd && 
-            vncserver :1 -geometry 1280x800 -depth 24 && 
-            /usr/share/novnc/utils/launch.sh --vnc localhost:5901 --listen 6080 & 
-            tail -f /dev/null"
+      - "6081:6080"
+      - "5901:5901"  # Port VNC direct
+    volumes:
+      - ./kali_setup.sh:/kali_setup.sh
+    command: /kali_setup.sh
     networks:
       - management_network
       - corporate_lan
 
-  # === Infrastructure réseau ===
   router:
     image: frrouting/frr:latest
     container_name: router
@@ -50,7 +46,6 @@ services:
     cap_add:
       - NET_ADMIN
       - SYS_ADMIN
-    # Configuration des ressources pour réduire la consommation
     deploy:
       resources:
         limits:
@@ -65,12 +60,10 @@ services:
       bash -c "sysctl -w net.ipv4.ip_forward=1 && 
               /usr/lib/frr/docker-start"
 
-  # === Workstation Windows simplifiée (Client vulnérable) ===
   windows_client:
-    image: alpine:latest  # Version légère avec simulation de Windows
+    image: alpine:latest
     container_name: windows_client
     hostname: win-client
-    # Configuration des ressources pour réduire la consommation
     deploy:
       resources:
         limits:
@@ -81,7 +74,7 @@ services:
     command: >
       sh -c "apk add --no-cache python3 && 
             python3 -m http.server 80 & 
-            while true; do sleep 3600; done"  # Keep container running
+            while true; do sleep 3600; done"
 
 volumes:
   kali_data:
