--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,14 +29,22 @@ services:
     hostname: kali
     ports:
       - "2222:22"
-      - "6081:6080"
+      - "6080:6080"
       - "5901:5901"  # Port VNC direct
     volumes:
       - ./kali_setup.sh:/kali_setup.sh
-    command: /kali_setup.sh
+    command: bash -c "chmod +x /kali_setup.sh && /kali_setup.sh"
     networks:
-      - management_network
-      - corporate_lan
+      management_network:
+        ipv4_address: 10.99.10.10
+      corporate_lan:
+        ipv4_address: 192.168.99.10
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1G
 
   router:
     image: frrouting/frr:latest
@@ -52,13 +60,18 @@ services:
           cpus: '0.5'
           memory: 256M
     networks:
-      - corporate_lan
-      - dmz_network
-      - iot_network
-      - management_network
+      corporate_lan:
+        ipv4_address: 192.168.99.1
+      dmz_network:
+        ipv4_address: 172.16.99.1
+      iot_network:
+        ipv4_address: 192.168.98.1
+      management_network:
+        ipv4_address: 10.99.10.1
     command: >
       bash -c "sysctl -w net.ipv4.ip_forward=1 && 
               /usr/lib/frr/docker-start"
+    restart: unless-stopped
 
   windows_client:
     image: alpine:latest
@@ -70,11 +83,13 @@ services:
           cpus: '0.2'
           memory: 128M
     networks:
-      - corporate_lan
+      corporate_lan:
+        ipv4_address: 192.168.99.20
     command: >
       sh -c "apk add --no-cache python3 && 
             python3 -m http.server 80 & 
             while true; do sleep 3600; done"
+    restart: unless-stopped
 
 volumes:
   kali_data:
